--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,12 @@
     ],
     "rules": {
       "no-console": 1, // Means warning
-      "prettier/prettier": 2 // Means error
+      "camelcase": 1,
+      "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      },
+    ],
     }
   }
